--- a/Website/Website/Website/Views/Shared/_WebLayout.cshtml
+++ b/Website/Website/Website/Views/Shared/_WebLayout.cshtml
@@ -7,13 +7,17 @@
 
 <!DOCTYPE html>
 <html lang="eng">
-
 <head>
     <title>@ViewBag.Title</title>
     <!-- Meta tag Keywords -->
+    <meta http-equiv="Content-Language" content="vi">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="keywords" content="@ViewBag.MetaKeywords" />
+    <meta name="description" content="@ViewBag.MetaDescription" />
+    <meta name="Author" content="HPZ Việt Nam"/>
+    <meta name="copyright" content="Copyright 2019" />
+    <meta name="Designer" content="HPZ Việt Name" />
     <script>
 		addEventListener("load", function () {
 			setTimeout(hideURLbar, 0);
