--- a/Website/Website/Website/Areas/Admin/Views/Menu/Create.cshtml
+++ b/Website/Website/Website/Areas/Admin/Views/Menu/Create.cshtml
@@ -53,6 +53,10 @@
     <!-- FastClick -->
     <script src="~/Content/admin/bower_components/fastclick/lib/fastclick.js"></script>
     <script>
+        function textChange() {
+            var url = this.value;
+            $('#srIMG').src = url;
+        }
         $(function () {
 
 
