--- a/Website/Website/Website/Areas/Admin/Views/Category/Edit.cshtml
+++ b/Website/Website/Website/Areas/Admin/Views/Category/Edit.cshtml
@@ -1,9 +1,10 @@
 ﻿@model DBModel.ET.Category
 
 @{
-    ViewBag.Title = "Tạo mới danh mục tin";
+    ViewBag.Title = "Sửa danh mục tin tức";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+
 @section ClienCSS{
     <!-- DataTables -->
     <link rel="stylesheet" href="~/Content/admin/bower_components/datatables.net-bs/css/dataTables.bootstrap.min.css">
@@ -39,7 +40,7 @@
         </h1>
         <ol class="breadcrumb">
             <li>
-            @Html.ActionLink(@Resources.ResourceAdmin.AdminFunctionBackButtonText, "Index", null, new { @class = "btn btn-primary" })
+          @Html.ActionLink(@Resources.ResourceAdmin.AdminFunctionBackButtonText, "Index", null, new { @class = "btn btn-primary" })
             </li>
         </ol>
     </section>
@@ -87,11 +88,13 @@
     <!-- Default box -->
     <div class="box">
         <div class="box-body">
-            @using (Html.BeginForm("Create", "Category", FormMethod.Post, new { @class = "form-horizontal" }))
+            @using (Html.BeginForm("Edit", "Category", FormMethod.Post, new { @class = "form-horizontal" }))
             {
                 @Html.AntiForgeryToken()
 
                 <div class="form-horizontal">
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.CategoryID)
 
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
@@ -120,7 +123,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.MetaTite, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.TextBoxFor(model => model.MetaTite,  new { @class = "form-control" } )
+                            @Html.TextBoxFor(model => model.MetaTite, new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.MetaTite, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -139,10 +142,10 @@
                             @Html.ValidationMessageFor(model => model.MetaDescription, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                 
+
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Image,  new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Image, new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.TextBoxFor(model => model.Image, new { @class = "form-control" })
                             <a href="#" class="btn btn-primary" onclick="BrowseServer('Image');">Chọn ảnh..</a>
@@ -155,7 +158,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.TextAreaFor(model => model.Description,new { @class = "form-control" } )
+                            @Html.TextAreaFor(model => model.Description, new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -163,7 +166,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.DisplayOrder, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.TextBoxFor(model => model.DisplayOrder, "1", new { @class = "form-control", @autoforcus = "autoforcus", @required = "required", @Type = "number" })
+                            @Html.TextBoxFor(model => model.DisplayOrder, new { @class = "form-control", @autoforcus = "autoforcus", @required = "required", @Type = "number" })
                             @Html.ValidationMessageFor(model => model.DisplayOrder, "", new { @class = "text-danger" })
                         </div>
                     </div>
