--- a/Website/Website/Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Website/Website/Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -204,7 +204,7 @@
             <div class="pull-right hidden-xs">
                 <b>Version</b> 1.0
             </div>
-            <strong>Copyright &copy; 2018 <a href="https://vnailmarketpro.com">HPZ Việt Nam</a>.</strong> All rights
+            <strong>Copyright &copy; 2018 <a href="https://hpz.vn">HPZ Việt Nam</a>.</strong> All rights
             reserved.
         </footer>
        
