--- a/Website/Website/Website/Areas/Admin/Views/User/Index.cshtml
+++ b/Website/Website/Website/Areas/Admin/Views/User/Index.cshtml
@@ -186,7 +186,7 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" id="btnSave" data-dismiss="modal">Ghi</button> <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Thoát</button>
+                <button type="button" class="btn btn-default" id="btnSave" data-dismiss="modal">@Resources.ResourceAdmin.AdminSaveButtonText</button> <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Thoát</button>
             </div>
         </div>
 
