--- a/Website/Website/Website/Views/Home/Index.cshtml
+++ b/Website/Website/Website/Views/Home/Index.cshtml
@@ -668,7 +668,7 @@
     <div class="container py-xl-3">
         <ul class="list-unstyled">
             <li>
-                <i class="fab fa-supple"></i>
+                <i class="fab">s</i>
             </li>
             <li>
                 <i class="fab fa-angrycreative"></i>
