--- a/Website/Website/Website/Areas/Admin/Views/Advertise/Create.cshtml
+++ b/Website/Website/Website/Areas/Admin/Views/Advertise/Create.cshtml
@@ -1,7 +1,7 @@
-﻿@model DBModel.ET.Side
+﻿@model DBModel.ET.Advertise
 
 @{
-    ViewBag.Title = "Tạo Side";
+    ViewBag.Title = "Liên kết website";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
@@ -38,7 +38,7 @@
 @section ContenHeader{
     <section class="content-header">
         <h1>
-            Tạo mới danh mục tin
+            Tạo mới liên kết website
         </h1>
         <ol class="breadcrumb">
             <li>
@@ -97,13 +97,12 @@
     <!-- Default box -->
     <div class="box">
         <div class="box-body">
-            @using (Html.BeginForm("Create", "Side", FormMethod.Post, new { @class = "form-horizontal", id = "frmAbout" }))
+            @using (Html.BeginForm("Create", "Advertise", FormMethod.Post, new { @class = "form-horizontal", id = "frmAbout" }))
             {
                 @Html.AntiForgeryToken()
                 <div class="form-horizontal">
 
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                 
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })        
                     <div class="form-group">
                         @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -112,18 +111,19 @@
                         </div>
                     </div>
 
+                    
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.DisplayOrder, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.TextAreaFor(model => model.Description, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                          @Html.TextBoxFor(model => model.DisplayOrder, "1", new { @class = "form-control", @autoforcus = "autoforcus", @required = "required", @Type = "number" })
+                            @Html.ValidationMessageFor(model => model.DisplayOrder, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Link, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.TextBoxFor(model => model.Link, new { @class = "form-control" } )
+                            @Html.TextBoxFor(model => model.Link, new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.Link, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -131,16 +131,16 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.Target, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.DropDownListFor(model => model.Target, new List<SelectListItem> { new SelectListItem { Text = "Mở ở trang hiện tại", Value = "_self", Selected = true }, new SelectListItem { Text = "Mở ở tab mới", Value = "_blank" },  new SelectListItem { Text = "Mở tơi tab mở tab hiện tại", Value = "_parent" } }, new { @class = "form-control" })
+                            @Html.TextBoxFor(model => model.Target, new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.Target, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                    
+
                     <div class="form-group">
-                        @Html.LabelFor(model => model.DisplayOrder, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.TextBoxFor(model => model.DisplayOrder, "1", new { @class = "form-control", @autoforcus = "autoforcus", @required = "required", @Type = "number" })
-                            @Html.ValidationMessageFor(model => model.DisplayOrder, "", new { @class = "text-danger" })
+                            @Html.TextAreaFor(model => model.Description, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
@@ -153,6 +153,23 @@
                             @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
                         </div>
                     </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Heigt, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.TextBoxFor(model => model.Heigt,  new { @class = "form-control", @autoforcus = "autoforcus", @required = "required", @Type = "number" })
+                            @Html.ValidationMessageFor(model => model.Heigt, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Wide, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.TextBoxFor(model => model.Wide, new { @class = "form-control", @autoforcus = "autoforcus", @required = "required", @Type = "number" })
+                            @Html.ValidationMessageFor(model => model.Wide, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
                     <div class="form-group">
                         @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -162,6 +179,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
                             <input type="submit" value="@Resources.ResourceAdmin.AdminSaveButtonText" class="btn btn-primary" />
