Xong chức năng footer

--- a/Website/Website/Website/Views/Shared/_WebLayout.cshtml
+++ b/Website/Website/Website/Views/Shared/_WebLayout.cshtml
@@ -222,7 +222,7 @@
                 <div class="row">
                     <p class="col-lg-8 copy-right-grids text-white text-lg-left text-center mt-lg-1">
                         © 2018 Được phát triển bởi
-                        <a href="https://w3layouts.com/" target="_blank">HPZ Việt Nam</a>
+                        <a href="https://hpz.vn/" target="_blank">HPZ Việt Nam</a>
                     </p>
                     <!-- social icons -->
                     <div class="social-icons text-lg-right text-center col-lg-4 mt-lg-0 mt-3">
